--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,5 +4,8 @@ app {
     port = 8080
     timeout = 40 seconds
   }
+  rates-service {
+    uri = "http://0.0.0.0:8081/rates"
+    token = "10dc303535874aeccc86a8251e6992f5"
+  }
 }
-
