--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,19 @@
 app {
+
   http {
     host = "0.0.0.0"
     port = 8080
     timeout = 40 seconds
   }
+
   rates-service {
     uri = "http://0.0.0.0:8081/rates"
     token = "10dc303535874aeccc86a8251e6992f5"
+  }
+
+  cache-service {
+    # Per each currency pair supported (9^2)
+    size = 81
+    expiration = 5 minutes
   }
 }
