--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,15 +1,17 @@
-align.openParenCallSite                      = false
-align.tokens                                 = ["%", "%%", {code = "=>", owner = "Case"}, {code = "=", owner = "(Enumerator.Val|Defn.(Va(l|r)|Def|Type))"}, ]
-align.arrowEnumeratorGenerator               = true
-binPack.parentConstructors                   = false
-danglingParentheses                          = true
-maxColumn                                    = 120
-newlines.afterImplicitKWInVerticalMultiline  = true
-newlines.beforeImplicitKWInVerticalMultiline = true
-project.excludeFilters                       = [ .scalafmt.conf ]
-project.git                                  = true
-rewrite.rules                                = [PreferCurlyFors, RedundantBraces, RedundantParens, SortImports]
-spaces.inImportCurlyBraces                   = true
-style                                        = defaultWithAlign
-unindentTopLevelOperators                    = true
+version        = 3.3.1
+runner.dialect = scala213
 
+
+align.openParenCallSite        = false
+align.arrowEnumeratorGenerator = true
+align.tokens                   = ["%", "%%", {code = "=>", owner = "Case"}, {code = "=", owner = "(Enumerator.Val|Defn.(Va(l|r)|Def|Type))"}, ]
+binPack.parentConstructors     = false
+danglingParentheses.preset     = true
+maxColumn                      = 120
+project.excludeFilters         = [ .scalafmt.conf ]
+project.git                    = true
+rewrite.rules                  = [PreferCurlyFors, RedundantBraces, RedundantParens, SortImports]
+rewrite.trailingCommas.style   = keep
+spaces.inImportCurlyBraces     = true
+style                          = defaultWithAlign
+unindentTopLevelOperators      = true
